--- a/debian/redis.conf
+++ b/debian/redis.conf
@@ -43,3 +43,13 @@ logfile /var/log/redis/redis-server.log
 
 # Set the number of databases.
 databases 16
+
+############################### ADVANCED CONFIG ###############################
+
+# Slaveof <masterip> <masterport>
+# slaveof 192.168.1.2 6379
+
+# Glue small output buffers together in order to send small replies in a
+# single TCP packet. Uses a bit more CPU but most of the times it is a win
+# in terms of number of queries per second. Use 'yes' if unsure.
+glueoutputbuf yes
