--- a/debian/control
+++ b/debian/control
@@ -39,3 +39,13 @@ Description: Persistent key-value database with network interface (Erlang client
  manipulating and querying data structures such as lists and sets.
  .
  This package contains the Erlang client library.
+
+Package: libphp-redis
+Architecture: any
+Depends: ${misc:Depends}, php5
+Description: Persistent key-value database with network interface (PHP client library)
+ Redis is a key-value database in a similar vein to memcache but the dataset
+ is non-volatile. Redis additionally provides native support for atomically
+ manipulating and querying data structures such as lists and sets.
+ .
+ This package contains the PHP client library.
