--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,17 @@ Description: Persistent key-value database with network interface
  .
  The dataset is stored entirely in memory and periodically flushed to disk.
 
+Package: redis-doc
+Section: doc
+Architecture: all
+Depends: ${misc:Depends}
+Description: Persistent key-value database with network interface (Documentation)
+ Redis is a key-value database in a similar vein to memcache but the dataset
+ is non-volatile. Redis additionally provides native support for atomically
+ manipulating and querying data structures such as lists and sets.
+ .
+ This package contains the documentation for Redis.
+
 Package: python-redis
 Section: python
 Architecture: all
