--- a/debian/control
+++ b/debian/control
@@ -61,3 +61,14 @@ Description: Persistent key-value database with network interface (PHP client li
  manipulating and querying data structures such as lists and sets.
  .
  This package contains the PHP client library.
+
+Package: libredis-perl
+Architecture: any
+Section: perl
+Depends: ${misc:Depends}, ${perl:Depends}, libdata-dump-perl
+Description: Persistent key-value database with network interface (Perl client library)
+ Redis is a key-value database in a similar vein to memcache but the dataset
+ is non-volatile. Redis additionally provides native support for atomically
+ manipulating and querying data structures such as lists and sets.
+ .
+ This package contains the Perl client library.
