Sync upstream redis.conf with local version.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/redis.conf
+++ b/debian/redis.conf
@@ -4,6 +4,10 @@
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
 daemonize yes
 
+# When run as a daemon, Redis write a pid file in /var/run/redis.pid by default.
+# You can specify a custom pid file location here.
+pidfile /var/run/redis.pid
+
 # Accept connections on the specified port, default is 6379
 port 6379
 
@@ -58,9 +62,26 @@ databases 16
 
 # slaveof <masterip> <masterport>
 
+################################## SECURITY ###################################
+
+# Require clients to issue AUTH <PASSWORD> before processing any other
+# commands.  This might be useful in environments in which you do not trust
+# others with access to the host running redis-server.
+#
+# This should stay commented out for backward compatibility and because most
+# people do not need auth (e.g. they run their own servers).
+
+# requirepass foobared
+
 ############################### ADVANCED CONFIG ###############################
 
 # Glue small output buffers together in order to send small replies in a
 # single TCP packet. Uses a bit more CPU but most of the times it is a win
 # in terms of number of queries per second. Use 'yes' if unsure.
 glueoutputbuf yes
+
+# Use object sharing. Can save a lot of memory if you have many common
+# string in your dataset, but performs lookups against the shared objects
+# pool so it uses more CPU and can be a bit slower. Usually it's a good
+# idea.
+shareobjects no
