--- a/debian/redis.conf
+++ b/debian/redis.conf
@@ -16,7 +16,7 @@ port 6379
 #
 bind 127.0.0.1
 
-# Close the connection after a client is idle for N seconds
+# Close the connection after a client is idle for N seconds (0 to disable)
 timeout 300
 
 # Save the DB on disk:
@@ -34,6 +34,9 @@ save 900 1
 save 300 10
 save 60 10000
 
+# The filename where to dump the DB
+dbfilename dump.rdb
+
 # For default save/load DB in/from the working directory
 # Note that you must specify a directory not a file name.
 dir /var/lib/redis
@@ -50,7 +53,9 @@ loglevel notice
 # output for logging but daemonize, logs will be sent to /dev/null
 logfile /var/log/redis/redis-server.log
 
-# Set the number of databases.
+# Set the number of databases. The default database is DB 0, you can select
+# a different one on a per-connection basis using SELECT <dbid> where
+# dbid is a number between 0 and 'databases'-1
 databases 16
 
 ################################# REPLICATION #################################
@@ -72,6 +77,16 @@ databases 16
 # people do not need auth (e.g. they run their own servers).
 
 # requirepass foobared
+
+################################### LIMITS ####################################
+
+# Set the max number of connected clients at the same time. By default there
+# is no limit, and it's up to the number of file descriptors the Redis process
+# is able to open. The special value '0' means no limts.
+# Once the limit is reached Redis will close all the new connections sending
+# an error 'max number of clients reached'.
+
+# maxclients 128
 
 ############################### ADVANCED CONFIG ###############################
 
