--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: redis
 Section: misc
 Priority: optional
 Maintainer: Chris Lamb <lamby@debian.org>
-Build-Depends: debhelper (>= 7.0.50), erlang-dev (>= 1:11.b.2-3)
+Build-Depends: debhelper (>= 7.0.50), erlang-dev (>= 1:11.b.2-3), quilt
 Build-Depends-Indep: python-support
 Standards-Version: 3.8.1
 Homepage: http://code.google.com/p/redis/
