--- a/debian/rules
+++ b/debian/rules
@@ -7,3 +7,7 @@ unexport CFLAGS
 
 override_dh_auto_test:
 	# Testsuite requires working TCP/IP and a non-interactive mode
+
+override_dh_auto_clean:
+	rm -rf mkreleasehdr.sh
+	dh_auto_clean
