Upstream now ships an install target; let's just ignore it for now.

--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,8 @@ unexport CFLAGS
 override_dh_auto_test:
 	# Testsuite requires working TCP/IP and a non-interactive mode
 
+override_dh_auto_install:
+
 override_dh_auto_clean:
 	rm -rf mkreleasehdr.sh
 	dh_auto_clean
