--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Chris Lamb <lamby@debian.org>
 Build-Depends: debhelper (>= 7.0.50)
 Standards-Version: 3.9.1
 Homepage: http://code.google.com/p/redis/
-Vcs-Git: git://git.chris-lamb.co.uk/debian/pkg-redis.git
-Vcs-Browser: http://git.chris-lamb.co.uk/?p=debian/pkg-redis.git
+Vcs-Git: git://github.com/lamby/pkg-redis.git
+Vcs-Browser: https://github.com/lamby/pkg-redis
 
 Package: redis-server
 Architecture: any
