--- a/debian/redis.conf
+++ b/debian/redis.conf
@@ -33,7 +33,7 @@ bind 127.0.0.1
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
 #
-# unixsocket /tmp/redis.sock
+# unixsocket /var/run/redis.sock
 
 # Close the connection after a client is idle for N seconds (0 to disable)
 timeout 300
